--- a/header.html
+++ b/header.html
@@ -62,7 +62,7 @@
         border: #ef4444 solid 2px;
         transition: 300ms ease-in-out;
     }
-    .connect-button p {
+    .connect-button a {
         text-align: center;
         font-size: 20px;
         color: #ffffff;
@@ -71,6 +71,7 @@
         margin-bottom: 18px;
         margin-right: 17px;
         transition: 300ms ease-in-out;
+        text-decoration: none;
     }
     .connect-button img{
         transition: 300ms ease-in-out;
@@ -78,8 +79,9 @@
     .connect-button:hover{
         background-color: #ffffff;
         color: #ef4444;
+        cursor: pointer;
     }
-    .connect-button:hover > p{
+    .connect-button:hover > a{
         color: #ef4444;
     }
     .connect-button:hover > img{
@@ -95,16 +97,16 @@
     </div>
     <div class="navbar">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Products</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="index.php">Home</a></li>
+            <li><a href="aboutus.php">About Us</a></li>
+            <li><a href="products.php">Products</a></li>
+            <li><a href="blog.php">Blog</a></li>
+            <li><a href="contactus.php">Contact Us</a></li>
             <li>EN</li>
         </ul>
     </div>
     <div class="connect-button">
-        <p>Let's Connect</p>
+        <a href="contactus.php">Let's Connect</a>
         <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
     </div>
 </body>
