--- a/header.html
+++ b/header.html
@@ -8,11 +8,13 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <style>
-    body {
+    .header-container {
         margin-top: 30px;
         padding: 0;
         font-family: Arial, sans-serif;
         display: flex;
+        position: fixed;
+        width: 100%;
     }
     .navbar {
         background-color: #201f1f;
@@ -92,22 +94,24 @@
 </style>
 
 <body>
-    <div class="Logo">
-        <img src="images/Logo.png" alt="Company Logo" />
-    </div>
-    <div class="navbar">
-        <ul>
-            <li><a href="index.php">Home</a></li>
-            <li><a href="aboutus.php">About Us</a></li>
-            <li><a href="products.php">Products</a></li>
-            <li><a href="blog.php">Blog</a></li>
-            <li><a href="contactus.php">Contact Us</a></li>
-            <li>EN</li>
-        </ul>
-    </div>
-    <div class="connect-button">
-        <a href="contactus.php">Let's Connect</a>
-        <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
+    <div class="header-container">
+        <div class="Logo">
+            <img src="images/Logo.png" alt="Company Logo" />
+        </div>
+        <div class="navbar">
+            <ul>
+                <li><a href="index.php">Home</a></li>
+                <li><a href="aboutus.php">About Us</a></li>
+                <li><a href="products.php">Products</a></li>
+                <li><a href="blog.php">Blog</a></li>
+                <li><a href="contactus.php">Contact Us</a></li>
+                <li>EN</li>
+            </ul>
+        </div>
+        <div class="connect-button">
+            <a href="contactus.php">Let's Connect</a>
+            <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
+        </div>
     </div>
 </body>
 </html>
