--- a/header.html
+++ b/header.html
@@ -14,6 +14,7 @@
         font-family: Arial, sans-serif;
         display: flex;
         position: fixed;
+        z-index: 100;
         width: 100%;
     }
     .navbar {
