--- a/header.html
+++ b/header.html
@@ -10,15 +10,17 @@
 
   <style>
     .navbar {
-      padding: 16px 0;
-
+      padding: 2% 1%;
     }
 
     .navbar-nav{
         background-color: #201f1f;
         color: #ffffff;
         padding: 24px 0px;
+        padding-left: 20px;
+        padding-right: 20px;
         width: 600px;
+        max-width: 60%;
         margin: auto;
         margin-top: 0;
         border-radius: 7px;
@@ -83,7 +85,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
+      <div class="collapse navbar-collapse justify-content-center custom-collapse" id="navbarContent">
         <ul class="navbar-nav mb-2 mb-lg-0 gap-3">
           <li class="nav-item">
             <a class="nav-link" href="index.php">Home</a>
