--- a/header.html
+++ b/header.html
@@ -19,8 +19,8 @@
         padding: 24px 0px;
         padding-left: 20px;
         padding-right: 20px;
-        width: 600px;
-        max-width: 60%;
+        width: 100%;
+        max-width: 600px;
         margin: auto;
         margin-top: 0;
         border-radius: 7px;
