Made index page more responsive

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ include 'header.html'
             </div>
 
             <div class="process-2">
-                <img id="process-icon" src="icons/process2.svg">
-                <div class="process2-description">
+                <img id="process-img" src="images/process2.png">
+                <div class="process-description">
                     <h1>Standards That Pave the Future</h1>
                     <p>Quality drives every stage of our work. Our strict controls ensure reliable, reproducible research that meets the highest scientific and regulatory standards.</p>
                 </div>
-                <img id="process-img" src="images/process2.png">
+                <img id="process-icon" src="icons/process2.svg">
             </div>
 
             <div class="process-3">
