--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
         background-color: #201f1f;
         color: #ffffff;
         padding: 24px 0px;
-        padding-left: 20px;
+        padding-left: 00px;
         padding-right: 20px;
         width: 100%;
         max-width: 600px;
@@ -34,7 +34,8 @@
       font-family: 'IBM Plex Sans', sans-serif;
       font-size: 16px;
       transition: 150ms ease-in-out;
-      padding: 0;
+      padding : 0;
+      margin-left: 15px;
     }
     .nav-link:hover {
       text-shadow: 0px 0px 1px white;
