--- a/index.html
+++ b/index.html
@@ -12,9 +12,53 @@ include 'header.html'
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Manrope:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand" href="index.php">
+        <img src="images/Logo.png" alt="Company Logo">
+      </a>
+
+      <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center custom-collapse" id="navbarContent">
+        <ul class="navbar-nav mb-2 mb-lg-0 gap-3">
+          <li class="nav-item">
+            <a class="nav-link" href="index.php">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.php">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.php">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.php">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactus.php">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link">EN</span>
+          </li>
+        </ul>
+      </div>
+
+      <a href="contactus.php" class="connect-button ms-auto d-none d-lg-flex">
+        <span>Let's Connect</span>
+        <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
+      </a>
+    </div>
+  </nav>
+
+
+
     <section class="hero-section">
         <img src="images/main-hero-image.png">
         <h1>Leading The World's Immunology Research</h1>
@@ -84,8 +128,8 @@ include 'header.html'
                 <img id="process-icon" src="icons/process3.svg">
             </div>
     </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
-<?php
-include 'footer.html'
-?>
+
 </html>
