added footer to index

--- a/index.html
+++ b/index.html
@@ -130,6 +130,54 @@ include 'header.html'
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+    <footer>
+        <div class="contact-us">
+            <h1>Connect With Our Team</h1>
+            <p>Reach out to discuss partnerships, products, or tailored support for your needs.</p>
+            <div class="connect-button-f">
+                <a href="contactus.php">Let's Connect</a>
+            </div>
+        </div>
+        <div class="footer-container">
+            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <div class="footer-content">
+                <div class="follow-us">
+                    <h1>Follow Us</h1>
+                        <a href="https://www.instagram.com/indecdiagnostics/" target="_blank"> <img src="icons/instagram.svg" alt="Instagram Icon" /></a>
+                        <a href="https://www.facebook.com/indecdiagnostics/" target="_blank"> <img src="icons/facebook.svg" alt="Facebook Icon" /></a>
+                        <a href="https://www.linkedin.com/company/indecdiagnostics/" target="_blank"> <img src="icons/linkedin.svg" alt="Linkedin Icon" /></a>
+                </div>
+                <div class="site-navigation">
+                    <h1>Site Navigation</h1>
+                    <ul>
+                        <li><a href="index.php">Home</a></li>
+                        <li><a href="aboutus.php">About Us</a></li>
+                        <li><a href="products.php">Products</a></li>
+                        <li><a href="blog.php">Blog</a></li>
+                        <li><a href="contactus.php">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="contact-info">
+                    <h1>Contact Us</h1>
+                    <p>Kompleks Perkantoran Taman Pulo Gebang Blok A3 No. 17-20, Jalan Raya Bekasi KM 24, Jakarta 13910, Indonesia.</p>
+                    <div class="phone-number">
+                        <img src="icons/phone.svg" alt="Phone Icon" />
+                        <p>(62-21) 460-8822</p>
+                    </div>
+                    <div class="email">
+                        <img src="icons/mail.svg" alt="Email Icon" />
+                        <p>inquiry@indecdiagnostics.com</p>
+                    </div>
+                    <div class="careers">
+                        <img src="icons/mail.svg" alt="Careers Icon" />
+                        <p>careers@indecdiagnostics.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="copyright">Copyright © 2025 PT. Indec Diagnostics All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
