made about us page responsive

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>Indec Diagnostics - Home</title>
-    <link rel="stylesheet" href="styles/index.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Indec Diagnostics - About Us</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Manrope:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
-</head>
-<body>
+        <link rel="stylesheet" href="styles/aboutus.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    </head>
+    <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
         <img src="images/Logo.png" alt="Company Logo">
@@ -35,7 +37,7 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
+            <a class="nav-link" href="blog.hmtl">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -55,79 +57,61 @@
 
 
 
-    <section class="hero-section">
-        <img src="images/main-hero-image.png">
-        <h1>Leading The World's Immunology Research</h1>
-        <p>We are dedicated to advancing the science of immunology through pioneering research and innovation. By uncovering the complexities of the immune system, we aim to drive transformative breakthroughs in medicine. Our work powers the future of global health and disease prevention.</p>
-    </section>
-
-    <section class="product-tease">
-        <h1>Scientifically Proven, Widely Used</h1>
-        <p>Our most in-demand diagnostics deliver reliable results when time and precision matter most—used by healthcare providers and researchers around the world.</p>
-        <div class="product-card-container">
-            <div class="product-card">
-                <img src="images/Virocheck-HIV-12 1.png">
-                <h2>Virocheck HIV 1/2</h2>
-                <p>Catalog Number: RV-H10A / RV-H25A</p>
-                <p>Package Type: 10 / 25</p>
-                <div class="product-card-button">
-                    <a href="#">See More</a>
+        <section class="hero-section">
+            <img src="images/about-hero-image.png">
+            <div class="hero-section-content">
+                <h1>Who We Are</h1>
+                <p>We're a team of scientists, innovators, and collaborators dedicated to advancing the frontiers of immunology. With expertise spanning research, diagnostics, and technology, we work at the intersection of science and impact. </p>
+                <p>Driven by discovery and united by purpose, we transform complex immunological insights into practical, real-world solutions that improve health outcomes on a global scale. Every breakthrough we pursue is rooted in a deep commitment to collaboration, integrity, and the future of human health. </p>
+            </div>
+        </section>
+        <section class="partners-section">
+            <h1>Trusted by Industry Leaders</h1>
+            <p>Trusted by hospitals, pharmacies, and government health institutions, we deliver diagnostics that care at every level of the healthcare system.</p>
+                <div class="partners-row">
+                    <img src="images/century.png" alt="Century Pharmacy" id="century">
+                    <img src="images/watsons.png" alt="Watsons Pharmacy" id="watsons">
+                    <img src="images/KKRI.png" alt="Kementrian Kesehatan Republic Indonesia" id="KKRI">
+                    <img src="images/guardian.png" alt="Guardian Pharmacy" id="guardian">
+                    <img src="images/Siloam.png" alt="Siloam Hospitals" id="siloam">
+                    <img src="images/BIMC.png" alt="BIMC Hospital" id="bimc">
+                    <img src="images/Mayapada.png" alt="Mayapada Hospital" id="mayapada">
+                </div>
+        </section>
+        <section class="mission-section">
+            <div class="mission-vision-container">
+                <div class="mission-content">
+                    <h1>Purpose-Driven Science</h1>
+                    <p>We aim to transform cutting-edge immunology into practical, scalable solutions that address real-world health challenges and improve outcomes for patients, providers, and public health systems alike.</p>
+                </div>
+                <div class="vision-content">
+                    <h1>The Future We're Building</h1>
+                    <p>We see a future where accurate, rapid diagnostics are not just accessible—but foundational to healthcare decisions everywhere, empowering clinicians and communities across every corner of the world.</p>
+                </div>
+            </div>
+            <div class="values-content">
+                    <h1>What We Stand For</h1>
+                    <p>We're committed to doing meaningful work with honesty, precision, and a shared responsibility to improve global health. Our values shape how we conduct research, build partnerships, and bring innovative diagnostics to the communities that need them most.</p>
+            </div>
+        </section>
+        <section class="career-section">
+            <div class="career-tagline">
+                <h1>Help Shape the Future of Health</h1>
+                <p>We're always looking for passionate, curious minds to join us in advancing immunological science and improving global health.</p>
+            </div>
+            <div class="career-cta">
+                <div class="career-button">
+                    <a href="contactus.html">Join Our Mission</a>
+                </div>
+                <div class="career-contact">
+                    <img src="icons/mail-black.svg" alt="Email">
+                    <p>careers@indecdiagnostics.com</p>
                 </div>
             </div>
 
-            <div class="product-card">
-                <img src="images/Plasmotec-Malaria-PfPv 1.png">
-                <h2>Plasmotec Malaria Pf/Pv</h2>
-                <p>Catalog Number: RP-PV10 / RP-PV25</p>
-                <p>Package Type: 10 / 25</p>
-                <div class="product-card-button">
-                    <a href="#">See More</a>
-                </div>
-            </div>
+        </section>
 
-            <div class="product-card">
-                <img src="images/ID-Biosens-Dengue-NS1 1.png">
-                <h2>ID Biosens Dengue NS1</h2>
-                <p>Catalog Number: RV-D02</p>
-                <p>Package Type: 25</p>
-                <div class="product-card-button">
-                    <a href="#">See More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-        <section class="about-section">
-            <div class="process-1">
-                <img id="process-img" src="images/process1.png">
-                <div class="process-description">
-                    <h1>Engineered for Results</h1>
-                    <p>Driven by science and precision, our process takes discoveries from concept to impact. Advanced methods and strict validation power every breakthrough.</p>
-                </div>
-                <img id="process-icon" src="icons/process1.svg">
-            </div>
-
-            <div class="process-2">
-                <img id="process-img" src="images/process2.png">
-                <div class="process-description">
-                    <h1>Standards That Pave the Future</h1>
-                    <p>Quality drives every stage of our work. Our strict controls ensure reliable, reproducible research that meets the highest scientific and regulatory standards.</p>
-                </div>
-                <img id="process-icon" src="icons/process2.svg">
-            </div>
-
-            <div class="process-3">
-                <img id="process-img" src="images/process3.png">
-                <div class="process-description">
-                    <h1>Delivering Innovation Worldwide</h1>
-                    <p>We manage end-to-end distribution with precision, from lab to destination. Every delivery is handled with care to maintain quality, compliance, and global reach.</p>
-                </div>
-                <img id="process-icon" src="icons/process3.svg">
-            </div>
-    </section>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-
-    <footer>
+        <footer>
         <div class="contact-us">
             <h1>Connect With Our Team</h1>
             <p>Reach out to discuss partnerships, products, or tailored support for your needs.</p>
@@ -174,6 +158,10 @@
         </div>
         <p class="copyright">Copyright © 2025 PT. Indec Diagnostics All rights reserved.</p>
     </footer>
-</body>
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    </body>
 
 </html>
