--- a/footer.html
+++ b/footer.html
@@ -173,7 +173,7 @@
             <h1>Connect With Our Team</h1>
             <p>Reach out to discuss partnerships, products, or tailored support for your needs.</p>
             <div class="connect-button-f">
-                <a href="contactus.php">Let's Connect</a>
+                <a href="contactus.html">Let's Connect</a>
             </div>
         </div>
         <div class="footer-container">
@@ -188,11 +188,11 @@
                 <div class="site-navigation">
                     <h1>Site Navigation</h1>
                     <ul>
-                        <li><a href="index.php">Home</a></li>
-                        <li><a href="aboutus.php">About Us</a></li>
-                        <li><a href="products.php">Products</a></li>
-                        <li><a href="blog.php">Blog</a></li>
-                        <li><a href="contactus.php">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="contact-info">
