--- a/header.html
+++ b/header.html
@@ -78,7 +78,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
-      <a class="navbar-brand" href="index.php">
+      <a class="navbar-brand" href="index.html">
         <img src="images/Logo.png" alt="Company Logo">
       </a>
 
@@ -89,19 +89,19 @@
       <div class="collapse navbar-collapse justify-content-center custom-collapse" id="navbarContent">
         <ul class="navbar-nav mb-2 mb-lg-0 gap-3">
           <li class="nav-item">
-            <a class="nav-link" href="index.php">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aboutus.php">About Us</a>
+            <a class="nav-link" href="aboutus.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="products.php">Products</a>
+            <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.php">Blog</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactus.php">Contact Us</a>
+            <a class="nav-link" href="contactus.html">Contact Us</a>
           </li>
           <li class="nav-item">
             <span class="nav-link">EN</span>
@@ -109,7 +109,7 @@
         </ul>
       </div>
 
-      <a href="contactus.php" class="connect-button ms-auto d-none d-lg-flex">
+      <a href="contactus.html" class="connect-button ms-auto d-none d-lg-flex">
         <span>Let's Connect</span>
         <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
       </a>
