--- a/contactus.html
+++ b/contactus.html
@@ -1,6 +1,3 @@
-<?php
-    include 'header.html';
-?>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +12,7 @@
         <link rel="stylesheet" href="styles/contactus.css">
     </head>
 
-    <style> <!-- no clue why I need to put it in the raw HTML file instead of the CSS file, even though it works in the live preview extension, it breaks on xampp. -->
+    <style> 
         .waze-button img, .google-maps-button img{
             transition: 150ms ease-in-out;
         }
@@ -105,7 +102,5 @@
             </div>
         </section>
     </body>
-    <?php
-        include 'footer.html';
-    ?>
+    
 </html> 
