--- a/contactus.html
+++ b/contactus.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Manrope:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="styles/contactus.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     </head>
 
     <style> 
@@ -37,11 +38,52 @@
     </style>
     
     <body>
+        <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/Logo.png" alt="Company Logo">
+      </a>
+
+      <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center custom-collapse" id="navbarContent">
+        <ul class="navbar-nav mb-2 mb-lg-0 gap-3">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.hmtl">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactus.html">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link">EN</span>
+          </li>
+        </ul>
+      </div>
+
+      <a href="contactus.html" class="connect-button ms-auto d-none d-lg-flex">
+        <span>Let's Connect</span>
+        <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
+      </a>
+    </div>
+  </nav>
+
+
         <img src="images/contact-hero-image.png" id="contact-hero-image">
         <section class="contact-section">
             <div class="contact-content">
                 <h1>Interested In Working Together?</h1>
-                <p>Whether you're a healthcare provider, researcher, or organization looking to collaborate or learn more, we’d love to connect and explore how we can work together.</p>
+                <p>Whether you're a healthcare provider, researcher, or organization looking to collaborate or learn more, we'd love to connect and explore how we can work together.</p>
                 <h2>Prefer to contact us directly?</h1>
                 <div class="email-info">
                     <img src="icons/mail-black.svg" alt="Email">
@@ -101,6 +143,59 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.5870111300055!2d106.94524637680806!3d-6.18598506061343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698b0e2461d2ff%3A0xa70fde0106454b!2sPT%20Indec%20Diagnostics!5e0!3m2!1sen!2smy!4v1753053366397!5m2!1sen!2smy" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
+
+
+
+
+        <footer>
+        <div class="contact-us">
+            <h1>Connect With Our Team</h1>
+            <p>Reach out to discuss partnerships, products, or tailored support for your needs.</p>
+            <div class="connect-button-f">
+                <a href="contactus.html">Let's Connect</a>
+            </div>
+        </div>
+        <div class="footer-container">
+            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <div class="footer-content">
+                <div class="follow-us">
+                    <h1>Follow Us</h1>
+                        <a href="https://www.instagram.com/indecdiagnostics/" target="_blank"> <img src="icons/instagram.svg" alt="Instagram Icon" /></a>
+                        <a href="https://www.facebook.com/indecdiagnostics/" target="_blank"> <img src="icons/facebook.svg" alt="Facebook Icon" /></a>
+                        <a href="https://www.linkedin.com/company/indecdiagnostics/" target="_blank"> <img src="icons/linkedin.svg" alt="Linkedin Icon" /></a>
+                </div>
+                <div class="site-navigation">
+                    <h1>Site Navigation</h1>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="contact-info">
+                    <h1>Contact Us</h1>
+                    <p>Kompleks Perkantoran Taman Pulo Gebang Blok A3 No. 17-20, Jalan Raya Bekasi KM 24, Jakarta 13910, Indonesia.</p>
+                    <div class="phone-number">
+                        <img src="icons/phone.svg" alt="Phone Icon" />
+                        <p>(62-21) 460-8822</p>
+                    </div>
+                    <div class="email">
+                        <img src="icons/mail.svg" alt="Email Icon" />
+                        <p>inquiry@indecdiagnostics.com</p>
+                    </div>
+                    <div class="careers">
+                        <img src="icons/mail.svg" alt="Careers Icon" />
+                        <p>careers@indecdiagnostics.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="copyright">Copyright © 2025 PT. Indec Diagnostics All rights reserved.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     </body>
     
 </html> 
