--- a/aboutus.html
+++ b/aboutus.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.hmtl">Blog</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contactus.html">Contact Us</a>
