--- a/products.html
+++ b/products.html
@@ -12,6 +12,49 @@
     <script src="scripts/products.js"></script>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/Logo.png" alt="Company Logo">
+      </a>
+
+      <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center custom-collapse" id="navbarContent">
+        <ul class="navbar-nav mb-2 mb-lg-0 gap-3">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactus.html">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link">EN</span>
+          </li>
+        </ul>
+      </div>
+
+      <a href="contactus.html" class="connect-button ms-auto d-none d-lg-flex">
+        <span>Let's Connect</span>
+        <img src="icons/arrow-top-right.svg" alt="Arrow Icon" />
+      </a>
+    </div>
+  </nav>
+
+
+
     <section class="hero-section">
         <img src="images/products-hero-image.png">
         <h1>Translating Science Into Impactful Solution</h1>
@@ -118,5 +161,55 @@
             </div>
         </div>    
     </section>
+
+    <footer>
+        <div class="contact-us">
+            <h1>Connect With Our Team</h1>
+            <p>Reach out to discuss partnerships, products, or tailored support for your needs.</p>
+            <div class="connect-button-f">
+                <a href="contactus.html">Let's Connect</a>
+            </div>
+        </div>
+        <div class="footer-container">
+            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <div class="footer-content">
+                <div class="follow-us">
+                    <h1>Follow Us</h1>
+                        <a href="https://www.instagram.com/indecdiagnostics/" target="_blank"> <img src="icons/instagram.svg" alt="Instagram Icon" /></a>
+                        <a href="https://www.facebook.com/indecdiagnostics/" target="_blank"> <img src="icons/facebook.svg" alt="Facebook Icon" /></a>
+                        <a href="https://www.linkedin.com/company/indecdiagnostics/" target="_blank"> <img src="icons/linkedin.svg" alt="Linkedin Icon" /></a>
+                </div>
+                <div class="site-navigation">
+                    <h1>Site Navigation</h1>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="contact-info">
+                    <h1>Contact Us</h1>
+                    <p>Kompleks Perkantoran Taman Pulo Gebang Blok A3 No. 17-20, Jalan Raya Bekasi KM 24, Jakarta 13910, Indonesia.</p>
+                    <div class="phone-number">
+                        <img src="icons/phone.svg" alt="Phone Icon" />
+                        <p>(62-21) 460-8822</p>
+                    </div>
+                    <div class="email">
+                        <img src="icons/mail.svg" alt="Email Icon" />
+                        <p>inquiry@indecdiagnostics.com</p>
+                    </div>
+                    <div class="careers">
+                        <img src="icons/mail.svg" alt="Careers Icon" />
+                        <p>careers@indecdiagnostics.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="copyright">Copyright © 2025 PT. Indec Diagnostics All rights reserved.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
