optimized image sizes

--- a/contactus.html
+++ b/contactus.html
@@ -84,7 +84,7 @@
             <div class="contact-content">
                 <h1>Interested In Working Together?</h1>
                 <p>Whether you're a healthcare provider, researcher, or organization looking to collaborate or learn more, we'd love to connect and explore how we can work together.</p>
-                <h2>Prefer to contact us directly?</h1>
+                <h2>Prefer to contact us directly?</h2>
                 <div class="email-info">
                     <img src="icons/mail-black.svg" alt="Email">
                     <p>inquiry@indecdiagnostics.com</p> 
@@ -106,7 +106,8 @@
                     </div>
                     <div class="form-group">
                         <label>Area of Interest</label>
-                        <select name="message" placeholder="Please Select One That Apply">
+                        <select name="message">
+                            <option value="" disabled selected>Please Select One That Apply</option>
                             <option value="Product Inquiry">Product Inquiry</option>
                             <option value="Research Collaboration">Research Collaboration</option>
                             <option value="Distribution Partnership">Distribution Partnership</option>
@@ -194,8 +195,7 @@
         </div>
         <p class="copyright">Copyright © 2025 PT. Indec Diagnostics All rights reserved.</p>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    </body>
+</body>
     
 </html> 
