Changed all images to webp format

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -55,7 +55,7 @@
 
 
     <section class="hero-section">
-        <img src="images/main-hero-image.png">
+        <img src="images/main-hero-image.webp">
         <h1>Leading The World's Immunology Research</h1>
         <p>We are dedicated to advancing the science of immunology through pioneering research and innovation. By uncovering the complexities of the immune system, we aim to drive transformative breakthroughs in medicine. Our work powers the future of global health and disease prevention.</p>
     </section>
@@ -65,7 +65,7 @@
         <p>Our most in-demand diagnostics deliver reliable results when time and precision matter most—used by healthcare providers and researchers around the world.</p>
         <div class="product-card-container">
             <div class="product-card">
-                <img src="images/Virocheck-HIV-12 1.png">
+                <img src="images/Virocheck-HIV-12 1.webp">
                 <h2>Virocheck HIV 1/2</h2>
                 <p>Catalog Number: RV-H10A / RV-H25A</p>
                 <p>Package Type: 10 / 25</p>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="product-card">
-                <img src="images/Plasmotec-Malaria-PfPv 1.png">
+                <img src="images/Plasmotec-Malaria-PfPv 1.webp">
                 <h2>Plasmotec Malaria Pf/Pv</h2>
                 <p>Catalog Number: RP-PV10 / RP-PV25</p>
                 <p>Package Type: 10 / 25</p>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="product-card">
-                <img src="images/ID-Biosens-Dengue-NS1 1.png">
+                <img src="images/ID-Biosens-Dengue-NS1 1.webp">
                 <h2>ID Biosens Dengue NS1</h2>
                 <p>Catalog Number: RV-D02</p>
                 <p>Package Type: 25</p>
@@ -97,7 +97,7 @@
     </section>
         <section class="about-section">
             <div class="process-1">
-                <img id="process-img" src="images/process1.png">
+                <img id="process-img" src="images/process1.webp">
                 <div class="process-description">
                     <h1>Engineered for Results</h1>
                     <p>Driven by science and precision, our process takes discoveries from concept to impact. Advanced methods and strict validation power every breakthrough.</p>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="process-2">
-                <img id="process-img" src="images/process2.png">
+                <img id="process-img" src="images/process2.webp">
                 <div class="process-description">
                     <h1>Standards That Pave the Future</h1>
                     <p>Quality drives every stage of our work. Our strict controls ensure reliable, reproducible research that meets the highest scientific and regulatory standards.</p>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="process-3">
-                <img id="process-img" src="images/process3.png">
+                <img id="process-img" src="images/process3.webp">
                 <div class="process-description">
                     <h1>Delivering Innovation Worldwide</h1>
                     <p>We manage end-to-end distribution with precision, from lab to destination. Every delivery is handled with care to maintain quality, compliance, and global reach.</p>
@@ -135,7 +135,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
