--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -56,7 +56,7 @@
 
 
     <section class="hero-section">
-        <img src="images/products-hero-image.png">
+        <img src="images/products-hero-image.webp">
         <h1>Translating Science Into Impactful Solution</h1>
         <p>We design and develop next-generation immunological products that support clinical research, drug development, and disease monitoring—bridging the gap between lab research and patient outcomes.</p>
     </section>
@@ -73,73 +73,73 @@
         </div>
         <div class="products-wrapper-1" id="products-1">
             <div class="product-card">
-                <img src="images/Virocheck-HBsAg 1.png">
+                <img src="images/Virocheck-HBsAg 1.webp">
                 <h2>Virocheck HBsAg</h2>
                 <p>Catalog Number: RV-B10 / RV-B11 / RV-B11</p>
                 <p>Package Type: 25 / 50 / 100</p>
             </div>
             <div class="product-card">
-                <img src="images/Startes-HCV 1.png">
+                <img src="images/Startes-HCV 1.webp">
                 <h2>Startes HCV</h2>
                 <p>Catalog Number: FW-V04 / FW-V12 / FW-V13</p>
                 <p>Package Type: 25 / 50 / 100</p>
             </div>
             <div class="product-card">
-                <img src="images/Virocheck-HIV-12 1.png">
+                <img src="images/Virocheck-HIV-12 1.webp">
                 <h2>Virocheck HIV 1/2</h2>
                 <p>Catalog Number: RV-H10A / RV-H25A</p>
                 <p>Package Type: 10 / 25</p>
             </div>
             <div class="product-card">
-                <img src="images/ID-Biosens-Dengue-NS1 1.png">
+                <img src="images/ID-Biosens-Dengue-NS1 1.webp">
                 <h2>ID Biosens Dengue NS1</h2>
                 <p>Catalog Number: RV-D02</p>
                 <p>Package Type: 25</p>
             </div>
             <div class="product-card">
-                <img src="images/ID-Biosens-Dengue-IgG-IgM 1.png">
+                <img src="images/ID-Biosens-Dengue-IgG-IgM 1.webp">
                 <h2>ID Biosens Dengue IgG/IgM</h2>
                 <p>Catalog Number: RV-D01</p>
                 <p>Package Type: 25</p>
             </div>
             <div class="product-card">
-                <img src="images/Virotec-Dengue-Combo 1.png">
+                <img src="images/Virotec-Dengue-Combo 1.webp">
                 <h2>Virotec Dengue Combo</h2>
                 <p>Catalog Number: DS-V33 / DS-V32</p>
                 <p>Package Type: 10 / 25</p>
             </div>
             <div class="product-card">
-                <img src="images/INDEC-COVID-19-IgGIgM (1) 1.png">
+                <img src="images/INDEC-COVID-19-IgGIgM (1) 1.webp">
                 <h2>INDEC COVID-19 IgG/Ig</h2>
                 <p>Catalog Number: ID-CO225</p>
                 <p>Package Type: 25</p>
             </div>
             <div class="product-card">
-                <img src="images/Plasmotec-Malaria-PfPv 1.png">
+                <img src="images/Plasmotec-Malaria-PfPv 1.webp">
                 <h2>Plasmotec Malaria Pf/Pv</h2>
                 <p>Catalog Number: RP-PV10 / RP-PV25 / RP-PV50</p>
                 <p>Package Type: 10 / 25 / 50</p>
             </div>
             <div class="product-card">
-                <img src="images/Plasmotec-Malaria-PfPan 1.png">
+                <img src="images/Plasmotec-Malaria-PfPan 1.webp">
                 <h2>Plasmotec Malaria Pf/Pan</h2>
                 <p>Catalog Number: RP-PN10 / RP-PN25 / RP-PN50</p>
                 <p>Package Type: 10 / 25 / 50</p>
             </div>
             <div class="product-card">
-                <img src="images/Plasmotec-Malaria-3 1.png">
+                <img src="images/Plasmotec-Malaria-3 1.webp">
                 <h2>Plasmotec Malaria - 3</h2>
                 <p>Catalog Number: RP-PN10 / RP-PN25 / RP-PN50</p>
                 <p>Package Type: 10 / 25 / 50</p>
             </div>
             <div class="product-card">
-                <img src="images/SPOT-Typhi-IgM 1.png">
+                <img src="images/SPOT-Typhi-IgM 1.webp">
                 <h2>SPOT Typhi® IgM</h2>
                 <p>Catalog Number: RB-ST10 / RB-ST25 / RB-ST50</p>
                 <p>Package Type: 10 / 25 / 50</p>
             </div>
             <div class="product-card">
-                <img src="images/Trepocheck-Syphilis 1.png">
+                <img src="images/Trepocheck-Syphilis 1.webp">
                 <h2>Trepocheck Syphilis</h2>
                 <p>Catalog Number: RB-TS10 / RB-TS25 / RB-TS30</p>
                 <p>Package Type: 10 / 25 / 30</p>
@@ -148,13 +148,13 @@
 
         <div class="products-wrapper-2" id="products-2">
             <div class="product-card">
-                    <img src="images/INDEC-Ziehl-Neelsen 1.png">
+                    <img src="images/INDEC-Ziehl-Neelsen 1.webp">
                     <h2>INDEC Ziehl Neelsen</h2>
                     <p>Catalog Number: MF-ZN01 / MF-ZN02</p>
                     <p>Package Type: 3 / 5</p>
             </div>
             <div class="product-card">
-                <img src="images/Mycotec-TB-XP 1.png">
+                <img src="images/Mycotec-TB-XP 1.webp">
                 <h2>Mycotec TB XP (Recombinant)</h2>
                 <p>Catalog Number: MF-ZN04 / MF-ZN03</p>
                 <p>Package Type: 3 / 5</p>
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
