--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -58,7 +58,7 @@
 
 
         <section class="hero-section">
-            <img src="images/about-hero-image.png">
+            <img src="images/about-hero-image.webp">
             <div class="hero-section-content">
                 <h1>Who We Are</h1>
                 <p>We're a team of scientists, innovators, and collaborators dedicated to advancing the frontiers of immunology. With expertise spanning research, diagnostics, and technology, we work at the intersection of science and impact. </p>
@@ -69,13 +69,13 @@
             <h1>Trusted by Industry Leaders</h1>
             <p>Trusted by hospitals, pharmacies, and government health institutions, we deliver diagnostics that care at every level of the healthcare system.</p>
                 <div class="partners-row">
-                    <img src="images/century.png" alt="Century Pharmacy" id="century">
-                    <img src="images/watsons.png" alt="Watsons Pharmacy" id="watsons">
-                    <img src="images/KKRI.png" alt="Kementrian Kesehatan Republic Indonesia" id="KKRI">
-                    <img src="images/guardian.png" alt="Guardian Pharmacy" id="guardian">
-                    <img src="images/Siloam.png" alt="Siloam Hospitals" id="siloam">
-                    <img src="images/BIMC.png" alt="BIMC Hospital" id="bimc">
-                    <img src="images/Mayapada.png" alt="Mayapada Hospital" id="mayapada">
+                    <img src="images/century.webp" alt="Century Pharmacy" id="century">
+                    <img src="images/watsons.webp" alt="Watsons Pharmacy" id="watsons">
+                    <img src="images/KKRI.webp" alt="Kementrian Kesehatan Republic Indonesia" id="KKRI">
+                    <img src="images/guardian.webp" alt="Guardian Pharmacy" id="guardian">
+                    <img src="images/Siloam.webp" alt="Siloam Hospitals" id="siloam">
+                    <img src="images/BIMC.webp" alt="BIMC Hospital" id="bimc">
+                    <img src="images/Mayapada.webp" alt="Mayapada Hospital" id="mayapada">
                 </div>
         </section>
         <section class="mission-section">
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
