--- a/blog-3.html
+++ b/blog-3.html
@@ -16,7 +16,7 @@
    <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -56,7 +56,7 @@
 
 
     <section class="hero-section">
-        <img src="images/blog-hero-image.png" alt="Blog Hero Image">
+        <img src="images/blog-hero-image.webp" alt="Blog Hero Image">
         <h1>Peningkatan Kasus Corona, PT Indec Diagnostic Siapkan Produk PCR Deteksi Varian Covid-19</h1>
         <p>30 Juni 2021</p>
     </section>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
