--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -54,7 +54,7 @@
 
 
     <section class="hero-section">
-        <img src="images/blog-hero-image.png" alt="Blog Hero Image">
+        <img src="images/blog-hero-image.webp" alt="Blog Hero Image">
         <h1>Thinking Differently About Immunology</h1>
         <p>Innovation begins with curiosity. Read our latest thoughts on emerging challenges in immune science, and how we're addressing them with novel approaches.</p>
     </section>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
