--- a/contactus.html
+++ b/contactus.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -79,7 +79,7 @@
   </nav>
 
 
-        <img src="images/contact-hero-image.png" id="contact-hero-image">
+        <img src="images/contact-hero-image.webp" id="contact-hero-image">
         <section class="contact-section">
             <div class="contact-content">
                 <h1>Interested In Working Together?</h1>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
