--- a/footer Copyable.html
+++ b/footer Copyable.html
@@ -177,7 +177,7 @@
             </div>
         </div>
         <div class="footer-container">
-            <img id="logo" src="images/Logo.png" alt="Indec Diagnostics Logo" />
+            <img id="logo" src="images/Logo.webp" alt="Indec Diagnostics Logo" />
             <div class="footer-content">
                 <div class="follow-us">
                     <h1>Follow Us</h1>
