--- a/header Copyable.html
+++ b/header Copyable.html
@@ -79,7 +79,7 @@
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Logo.png" alt="Company Logo">
+        <img src="images/Logo.webp" alt="Company Logo">
       </a>
 
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
