--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p>Catalog Number: RV-H10A / RV-H25A</p>
                 <p>Package Type: 10 / 25</p>
                 <div class="product-card-button">
-                    <a href="#">See More</a>
+                    <a href="products.html">See More</a>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                 <p>Catalog Number: RP-PV10 / RP-PV25</p>
                 <p>Package Type: 10 / 25</p>
                 <div class="product-card-button">
-                    <a href="#">See More</a>
+                    <a href="products.html">See More</a>
                 </div>
             </div>
 
@@ -90,7 +90,7 @@
                 <p>Catalog Number: RV-D02</p>
                 <p>Package Type: 25</p>
                 <div class="product-card-button">
-                    <a href="#">See More</a>
+                    <a href="products.html">See More</a>
                 </div>
             </div>
         </div>
